<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    tools:context=".ui.AddTaskActivity">


    <TextView
        android:id="@+id/add_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:background="@drawable/rounded_edit_text_teal"
        android:layout_marginTop="10dp"
        android:text="@string/addTaskB"
        android:textColor="@color/white"
        android:textSize="35sp" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/styled_add_task_title"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_task_title"
        android:layout_width="match_parent">

    <EditText
        android:id="@+id/task_title_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addTaskTitle"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/half_rounded_edit_text"
        android:layout_marginTop="15dp"
        android:hint="@string/task_title"
        android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/styled_task_description_box"
        android:layout_height="wrap_content"
        android:layout_below="@+id/styled_add_task_title"
        android:layout_width="match_parent">

        <EditText
        android:id="@+id/task_description_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_below="@+id/taskTitleBox"
        android:background="@drawable/half_rounded_edit_text"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/task_description"
        android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/task_states_spinner"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/rounded_edit_text_teal"
        android:layout_below="@+id/styled_task_description_box"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        />


    <Spinner
        android:id="@+id/task_team_spinner"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/task_states_spinner"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edit_text_teal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/upload_photo_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/task_team_spinner"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#3BACB6"
        android:drawableLeft="@drawable/ic_upload_image"
        android:text="Upload"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/add_location_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/upload_photo_button"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#3BACB6"
        android:text="Add Location"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/create_task_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/add_location_button"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#3BACB6"
        android:drawableLeft="@drawable/ic_add_task"
        android:text="@string/addTaskB"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tasks_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_task_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:background="#F7FF93"
         />


</RelativeLayout>