<resources>
    <string name="app_name">Task Master</string>
    <string name="addTaskB">Add Task</string>
    <string name="allTaskB">All Tasks</string>
    <string name="addTaskTitle">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="total_tasks_0">Total tasks: 0</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_password">No of Task to show</string>
    <string name="save_username_password">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_copyright">About</string>
    <string name="button_task_detail">No Tasks</string>
    <string name="title_according_to_task_title">Title</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="update_task_title">Update Task</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forget_password">Forget Password?</string>

    <string-array name="task_states_array">
        <item>State</item>
        <item>New</item>
        <item>Assigned</item>
        <item>In progress</item>
        <item>Completed</item>
    </string-array>
    <string-array name="task_states_filter_array">
        <item>Filter by</item>
        <item>New</item>
        <item>Assigned</item>
        <item>In progress</item>
        <item>Completed</item>
    </string-array>

    <string-array name="settings_item_array">
        <item>Account Settings</item>

    </string-array>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main0">MainActivity0</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

</resources>

