<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    tools:context=".ui.AddTaskActivity">


    <TextView
        android:id="@+id/update_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text_teal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/update_task_title"
        android:textColor="@color/white"
        android:textSize="35sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/styled_update_task_title_box"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_task_title"
        android:layout_width="match_parent">

    <EditText
        android:id="@+id/update_task_title_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3BACB6"
        android:background="@drawable/rounded_edit_text_teal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/task_title"
        android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/styled_update_task_description_box"
        android:layout_height="wrap_content"
        android:layout_below="@+id/styled_update_task_title_box"
        android:layout_width="match_parent">
    <EditText
        android:id="@+id/update_task_description_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text_teal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/task_description"
        android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>



    <Spinner
        android:id="@+id/update_task_states_spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/styled_update_task_description_box"
        android:background="@drawable/rounded_edit_text_teal"
        android:layout_marginTop="10dp"
        />


    <Spinner
        android:id="@+id/task_team_update_spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/update_task_states_spinner"
        android:background="@drawable/rounded_edit_text_teal"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/update_task_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/task_team_update_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/teal_700"
        android:text="Save" />

    <Button
        android:id="@+id/backToDescriptionPage"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/update_task_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/teal_700"
        android:text="Cancel" />


</RelativeLayout>