...
    android:background="@color/silver"

    >


        <TextView
            android:id="@+id/username_welcoming"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_edit_text_yellow"
...
